src/snapshots/afrotd__parser__tests__interpreation_html_10.2.5_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B foult bei einem erfolgreichen Fieldgoal.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A hat die Wahl, die Punkte abzulehnen und die Strafe vom
                Previous Spot durchführen zu lassen oder die Strafe abzulehnen
                und die Punkte zu akzeptieren. Team A kann die Punkte annehmen
                und die Strafe für persönliche Fouls und unsportliche
                Verhalten-Fouls beim anschließenden Kickoff oder vom Succeeding
                Spot in Extraperioden durchführen lassen. Fouls nach einem
                Touchdown durch Team A:
            </p>
        </details>
    </div>
</article>
