src/snapshots/afrotd__parser__tests__interpreation_html_10.2.5_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A foult, nachdem es einen Touchdown erzielt hat und Team B
            foult nach dem erfolgreichen Try.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Touchdown gilt. Team B hat die Wahl, die Strafe für Team
                A’s Foul beim Try, dem anschließenden Kickoff oder vom
                Succeeding Spot in Extraperioden durchführen zu lassen. Für das
                Foul nach dem Try wird Team B beim Kickoff oder vom Succeeding
                Spot in Extraperioden bestraft. Fouls während eines Try, ohne
                dass der Team Ballbesitz wechselt (das beinhaltet nicht Live
                Ball Fouls, die als Dead Ball Fouls behandelt werden oder Fouls
                mit einem Downverlust):
            </p>
        </details>
    </div>
</article>
