src/snapshots/afrotd__parser__tests__interpreation_html_2.11.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.11.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Punt rollt in der Nähe der Spieler A44 und B27 auf dem Boden.
            (a) A44 und B27 blocken sich gegenseitig. Der Ball prallt gegen
            B27’s Bein und wird dann von A55 an der B-35 recovert. (b) A44
            blockt B27, der dadurch den Ball berührt, und der Ball wird von A55
            auf der B-35 recovert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) A’s Ball, 1. und 10 von der B-35. Der Ball prallt gegen
                B27’s Bein, aber der Kontakt mit dem Ball wird nicht von A44
                verursacht. Keine erzwungene Berührung. (b) Es handelt sich um
                eine erzwungene Berührung, denn B27’s Ballberührung wird durch
                A44’s Block erzwungen. B27’s Berührung wird ignoriert. Dadurch
                liegt ein illegales Berühren eines Kicks durch A55 vor. B’s
                Ball, 1. und 10 von der B-35.
            </p>
        </details>
    </div>
</article>
