src/snapshots/afrotd__parser__tests__interpreation_html_2.12.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.12.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein unberührter Team A-Scrimmage Kick prallt im Spielfeld auf den
            Boden und durchbricht die Fläche über Team B’s Goalline. Während
            sich der Ball in der Luft befindet, schlägt A81, der sich entweder
            auf der B-1 oder in der Endzone befindet, den Ball ins Spielfeld
            zurück.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Violation wegen der illegalen Berührung (Regel 6.3.11). Team B
                kann das Ergebnis des Downs akzeptieren oder den Ball als
                nächstes an seiner 20-Meterlinie snappen (Ausnahme: Regel
                8.4.2.b).
            </p>
        </details>
    </div>
</article>
