src/snapshots/afrotd__parser__tests__interpreation_html_2.16.10_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.16.10.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim Snap tragen vier Team A-Linemen Trikots mit einer Nummer von
            50 bis 79 und drei Linemen Trikots mit einer Nummer außerhalb
            dieses Bereiches. Ein potentieller Kicker steht acht Meter hinter
            der Scrimmage Line und es gibt keinen potentiellen Holder.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegale Formation. Team A ist nicht in einer Scrimmage
                Kick-Formation und hat nicht die erforderliche Anzahl an
                Linemen mit den korrekten Trikotnummern an der Linie.
            </p>
        </details>
    </div>
</article>
