src/snapshots/afrotd__parser__tests__interpreation_html_2.19.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.19.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Quarterback A12 wirft einen legalen Vorwärtspass, und der Receiver
            A88 berührt den Ball erst, als der Ball sich 1,5 Meter jenseits der
            neutralen Zone befindet. Der hintere Fuß von A88 befindet sich
            dabei nicht jenseits der neutralen Zone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der legale Vorwärtspass hat die neutrale Zone überquert. Regel
                2.19.3.a erklärt, dass ein Pass die neutrale Zone überquert
                hat, wenn er irgendetwas jenseits der neutralen Zone berührt.
                Gemäß Regel 2.19.3.b ist A88 als Spieler nicht jenseits der
                neutralen Zone. Trotzdem hat der Pass gemäß 2.19.3.a die
                neutrale Zone überquert, da er sich jenseits der neutralen Zone
                befand, als A88 ihn berührt hat. In Bezug auf das Überqueren
                der neutralen Zone gilt als Leitlinie der Punkt, an dem sich
                der Ball befindet, als er zuerst berührt wurde.
            </p>
        </details>
    </div>
</article>
