src/snapshots/afrotd__parser__tests__interpreation_html_2.8.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.8.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Free Kick von der A-35. Der Kickoff ist hoch und tief. Kickreturner
            B21 gibt, an der eigenen Goalline stehend, ein „T –Signal“. B21
            fängt den Kick direkt an der Goalline und advanct bis zur B-35.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B bekommt den Ball an der B-35, 1. und 10. Das „T –
                Signal“, wenn es korrekt ausgeführt wird, wird nicht als
                gültiges oder ungültiges Fair Catch-Signal angesehen. Es ist
                wichtig, dass dieses „T –Signal“ korrekt und ohne Winken
                ausgeführt wird, indem die Hände ausgestreckt werden und an
                oder unter Schulterhöhe verbleiben. Durch das „T–Signal“ wird
                der Ball nicht dead und nimmt dem Receiving Team nicht die
                Möglichkeit den Ball zu advancen.
            </p>
        </details>
    </div>
</article>
