src/snapshots/afrotd__parser__tests__interpreation_html_3.1.3_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.X
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der ersten Ballbesitz-Serie in einer Extraperiode erzielt
            Team A einen Touchdown. Beim Try fängt Team B einen Pass ab und
            advanct zu einem Zwei-Punkte-Touchdown.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B beginnt seine Ballbesitz-Serie an der 25-Meterlinie,
                wobei Team A in der Nachspielzeit mit 6:2 in Führung ist.
            </p>
        </details>
    </div>
</article>
