src/snapshots/afrotd__parser__tests__interpreation_html_3.1.3_13.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.XIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der zweiten Ballbesitz-Serie in einer Extraperiode fängt
            B25 einen Pass ab und advanct über Team A’s Goalline. Während des
            Laufes clippt B79 in der Spielfeldmitte.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Touchdown. Entweder ist das Spiel vorüber oder die nächste
                Extraperiode beginnt mit einem First Down und 10 an der
                entsprechenden 25-Meterlinie, da die Strafe nicht übertragen
                wird.
            </p>
        </details>
    </div>
</article>
